Fixed a layout bug.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,3 +61,7 @@ md-divider.top-divider {
     top: 0;
     bottom: auto;
 }
+
+.scientilla-main-list > div > h3 {
+    width: 600px;
+}
